--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,14 @@
-*{
+* {
   box-sizing: border-box;
 }
-body{
-  margin: 0;
-  padding: 0;
+body {
+  min-height: 100vh;
   font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
-header{
+header {
   background-color: teal;
   padding: 30px;
   color: white;
@@ -17,40 +18,54 @@ header{
   flex-wrap: wrap;
 }
 
-.logo{
+.logo {
   background-color: orangered;
   padding: 10px;
   border-radius: 10px;
 }
 
-footer{
+footer {
   background-color: orange;
   padding: 40px;
   text-align: center;
   color: white;
 }
 
-main{
+main {
   max-width: 1400px;
   margin: 0 auto;
   flex: 1;
+  padding: 0 20px;
 }
 
-article{
+article {
   margin: 10px 0;
   border: 2px solid black;
   border-radius: 10px;
+  padding: 15px 20px;
 }
 
-h1{
+h1 {
   text-align: center;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
 
-ul{
+ul {
   list-style: none;
   text-align: right;
 }
 
-li{
+li {
   display: inline-block;
+}
+
+.logo {
+  max-width: fit-content;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+
+.page-header > * {
+  flex-grow: 0.5;
 }
